--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -4,7 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>Message Board</title>
+        <title>Message Board v2</title>
     </h:head>
     <h:body>
         <h:outputStylesheet name="default.css" library="css"/>
